# MapServer

./: .clang-format  .cvsignore  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG  CITATION.cff  CMakeLists.txt  COMMITERS  CONTRIBUTING.md  FUZZER.md  HISTORY.TXT  HISTORY.md  INSTALL  INSTALL.CMAKE  INSTALL.md  INSTALL_CMAKE.md  LICENSE.md  MIGRATION_GUIDE.TXT  MIGRATION_GUIDE.md  MIGRATION_GUIDE.txt  Makefile  Makefile.autotest  Makefile.autotests  Makefile.in  Makefile.vc  README  README.CONFIGURE  README.WIN32  README.md  README.rst  SECURITY.md  Vagrantfile  aclocal.m4  appveyor.yml  cgiutil.c  (+249 more)
apache/: CMakeLists.txt  mod_mapserver.c
fuzzers/: CMakeLists.txt  README.md  build.sh  configfuzzer.c  mapfuzzer.c  owsfuzzer.c  reproducer_main.cpp  shapefuzzer.c
mapcache/: INSTALL  LICENSE  Makefile  Makefile.in  Makefile.inc.in  Makefile.vc  README  aclocal.m4  benchmark.py  configure  configure.in  geocache.json  geocache.xml  httpd.conf  mapcache.xml  mapcache.xml.sample  mod_geocache.doxyfile  ngtemplate-LICENSE  nmake.opt  reconfigure.sh
mapcache/apache/: Makefile  Makefile.in  mod_mapcache.c
mapcache/cgi/: Makefile  Makefile.in  mapcache.c
mapcache/include/: errors.h  geocache.h  hashtable.h  internal.h  list.h  mapcache.h  ngtemplate.h  platform.h  stringbuilder.h  util.h  yatc.h
mapcache/lib/: Makefile  Makefile.in  axisorder.c  buffer.c  cache_bdb.c  cache_disk.c  cache_sqlite.c  cache_tiff.c  configuration_xml.c  core.c  dimension.c  ezxml.c  http.c  image.c  imageio_jpeg.c  imageio_png.c  service_demo.c  service_tms.c  service_ve.c  service_wms.c  source.c  source_gdal.c  source_mapserver.c  strptime.c  tileset.c  util.c
mapcache/nginx/: README  config.in  nginx.conf  ngx_http_mapcache_module.c
mapcache/src/: Makefile  axisorder.c  buffer.c  cJSON.c  cache_disk.c  cache_memcache.c  cache_sqlite.c  cache_tiff.c  configuration.c  configuration_json.c  configuration_xml.c  core.c  dimension.c  ezxml.c  fastcgi_geocache.c  fastcgi_mapcache.c  geocache_seed.c  grid.c  hashtable.c  http.c  image.c  image_error.c  imageio.c  imageio_jpeg.c  imageio_mixed.c  imageio_png.c  internal.c  list.c  lock.c  mapcache_seed.c  mod_geocache.c  mod_mapcache.c  mod_yatc.c  ngtembed.c  ngtemplate.c  platform.c  service_demo.c  service_kml.c  service_tms.c  service_ve.c  (+11 more)
mapcache/static/: geocache.json  geocache.yaml  readme.xml
mapcache/util/: Makefile  Makefile.in  mapcache_seed.c
mapscript/csharp/: CMakeLists.txt  Makefile  Makefile.in  Makefile.vc  README  csmodule.i  swig_csharp_extensions.i
mapscript/csharp/config/: AssemblyInfo.cs  mapscript_csharp.dll.config
mapscript/csharp/examples/: HTMLtemplate.cs  RFC24.cs  drawmap.cs  drawmapDirect.cs  drawmapDirectPrint.cs  drawmapGDIPlus.cs  drawquery.cs  getbytes.cs  inline.cs  shapeinfo.cs  shpdump.cs
mapscript/java/: .cvsignore  CMakeLists.txt  Makefile  Makefile.in  README  javaextend.i  javamodule.i  makefile.vc
mapscript/java/data/: emptymap.map  iso-subset.dbf  iso-subset.shp  subset-umlauts.map  utf-subset.dbf  utf-subset.shx
mapscript/java/examples/: ConnPool.java  DrawMap.java  DumpShp.java  MakePoint.java  Metadata.java  OutputFormatList.java  QueryByAttribute.java  QueryByAttributeUnicode.java  RFC24.java  RunTimeBuiltWMSClient.java  ShapeInfo.java  WxSTest.java  WxSTestNoThread.java
mapscript/perl/: .gitignore  CMakeLists.txt  Makefile.PL  Makefile.PL.in  README  plextend.i  plmodule.i
mapscript/perl/examples/: RFC24.pl  buffer.pl  distanceToShape.pl  dump.pl  shp_in_shp.pl  shpinfo.pl  thin.pl  wxs.pl
mapscript/perl/tests/: 0-load.t  maps.t
mapscript/php/: CMakeLists.txt  Makefile.in  Makefile.vc  README  README.WIN32  class.c  cluster.c  color.c  error.c  grid.c  hashtable.c  image.c  label.c  labelcache.c  labelcachemember.c  labelleader.c  layer.c  legend.c  line.c  map.c  mapscript_error.c  mapscript_i.c  outputformat.c  owsrequest.c  php_mapscript.c  php_mapscript.h  php_mapscript_util.c  php_mapscript_util.h  php_proj.c  php_regex.c  point.c  projection.c  querymap.c  rect.c  referencemap.c  result.c  resultcachemember.c  scalebar.c  shape.c  shapefile.c  (+3 more)
mapscript/php/examples/: test_draw_map.phtml  test_layer_mask.phtml  test_writeshape.phtml
mapscript/phpng/: CMakeLists.txt  README.WIN32  php7module.i
mapscript/python/: .cvsignore  CMakeLists.txt  Makefile.in  README  README.rst  pyextend.i  pymodule.i  requirements-dev.txt  setup.cfg  setup.py  setup.py.in  setup_wnone.py  tox.ini  wxs.py
mapscript/python/examples/: geocode_addresses.py  project_csv.py  shpdump.py  shpinfo.py  wxs.py
mapscript/python/mapscript/: __init__.py
mapscript/python/pygdioctx/: pygdioctx.c  pygdioctx.h
mapscript/python/tests/: TESTING.txt  fonts.txt  fragments.txt  hashtest.py  mapscripttest.py  runalldoctests.py  rundoctests.dist  runtests.py  symbols.txt  test.map  testCloneMap.py  testCopyMap.py  testLayerOrder.py  testMapScript.py  testMapScriptCloning.py  testNextGenerationClasses.py  testRemove.py  test_nofontset.map
mapscript/ruby/: CMakeLists.txt  extconf.rb  rbextend.i  rbmodule.i
mapscript/ruby/examples/: shp2img.rb
src/mapscript/csharp/: CMakeLists.txt  Makefile.vc  README  csmodule.i  mapscript.snk  run_test.sh
src/mapscript/java/: CMakeLists.txt  javaextend.i  javamodule.i  makefile.vc  run_test.sh
src/mapscript/perl/: CMakeLists.txt  README  plextend.i  plmodule.i
src/mapscript/phpng/: CMakeLists.txt  README.WIN32
src/mapscript/python/: CMakeLists.txt  README.rst  pyextend.i  (+3 more)
tinyows/: LICENSE  Makefile.in  Makefile.vc  NEWS  README  config.xml  configure.in  nmake.opt
tinyows/demo/: ABOUT  france.dbf  france.shp  france.shx  install.sh.in  tinyows.xml.in
tinyows/doc/: Doxyfile
tinyows/schema/: LICENSE
tinyows/src/: ows_api.h  ows_define.h.in  ows_struct.h
tinyows/test/: README  ogc_test_config.xml  ogc_wfs_data.sql  run_test  unit_test  wfs_describe  wfs_get_capabilities  wfs_get_feature  wfs_get_feature_with_lock  wfs_lock_feature  wfs_transaction  wms_get_capabilities  wms_get_map
(+4314 files in other folders)
